syntax = "proto3";
package storageref;

// StorageRef references storage.
message StorageRef {
  // StorageType contains the type of storage this references.
  StorageType storage_type = 1;
  // Ipfs contains a IPFS storage reference.
  StorageRefIPFS ipfs = 2;
}

// StorageType contains the possible types of storage.
enum StorageType {
  // StorageType_UNKNOWN holds unknown values.
  StorageType_UNKNOWN = 0;
  // StorageType_IPFS is the IPFS storage type.
  StorageType_IPFS = 1;
}

// StorageRefIPFS references an object in IPFS.
message StorageRefIPFS {
  // ObjectHash contains the referenced object hash in string form.
  string object_hash = 1;
}